[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "epls"
version = "0.1.0"
description = "Evolutionary Planning in Latent Space"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "gymnasium[box2d]>=0.29",
    "numpy>=1.26",
    "pillow>=10",
    "tqdm>=4.65",
    "colorama>=0.4",
    "tensorboard>=2.13",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pyright]
pythonVersion = "3.9"
extraPaths = ["."]

